test/cgip/PP/error/concur/permis-and-exception/permis-01.res
Run-Time Error 208: Class name is not defined: A
